# robbie

./: .gitignore  .gitignore~  CMakeLists.txt  README.md  README.md~  mainpage.dox  manifest.xml  manifest.xml~  package.xml  setup.py  shoulder.ino
action/: RobbieArm.action
action_learning/: ax12_to_pr2_state_msgs.py  backwards.py  dock_action.py  erratic_base_action.py  go_home.py  head_track_traj.py  move_arm_demo.py  move_base_demo.py  move_base_door.py  move_fish_tank.py  move_forward_1_meter.py  move_head_action.py  move_head_demo.py  recharge_action.py  rest_right_arm.py  robbie_arm_action.py  robbie_arm_action_ik.py  robbie_arm_gripper_action.py  robbie_base_action.py  robbie_base_action.py~  robbie_head_action.py  robbie_head_action.py~  wave_right_hand.py  wave_right_hand.py~
behave/: clean_house.py  clean_house_smach.py  health_monitor.py  health_monitor_old.py  patrol_tree.py  robbie_mcp.py
config/: base_local_planner_params.yaml  costmap_common_params.yaml  dialogues_en  global_costmap_params.yaml  local_costmap_params.yaml  rgb_A00362A14245042A.yaml
data/: objects_list
hark/: 1_Julius.sh  2_HARK.sh  Recognition_en.n  Recognition_my.n  result.txt  test.sh
launch/: 1_stage.launch  1_stage.launch~  a_test.launch  a_voice_rec.launch  action.launch  action.launch~  ai.launch  ai.launch~  amcl_diff.launch  amcl_diff.launch~  amcl_robbie.launch  amcl_robbie.launch~  arbot_arm.launch  arbotix.launch  arm.launch  arm.launch~  arm_test.launch  atlas.launch  dynamixels.launch  face_detector.rgbd.launch  face_server  face_tracker2.launch  face_tracker_kinect.launch  face_tracker_uvc_cam.launch  face_tracker_uvc_cam.launch~  fake_turtlebot.launch  gmapping_robbie.launch  greeting.launch  greeting.launch~  gripper_test.launch  hark.launch  hector_moveit.launch  imu_test.launch  move_base.launch  move_base.launch~  moveit.launch  openni.launch  openni.launch~  openni2.launch  ork_camera.launch  (+25 more)
maps/: map.pgm
mesh/: gear_box.stl  shoulder_pan_gear.stl  upper_torso.stl  upper_torso1.stl  upper_torso2.stl
meshes/: Elbow_joint.stl  Left_tilt_bracket_new.stl  Right_bicep_frame.stl  Right_foreArm1.stl  Right_tilt_bracket_new.stl  Shoulder_pan.stl  Shoulder_tilt.stl  arm_top_left.stl  bottom torso.stl  elbow_plug.stl  finger.dae  left_mid_front.stl  left_top_shoulder.stl  right_arm _middle front.stl  right_arm lower top.stl  right_shoulder_tilt.stl  shoulder_lift_bracket.stl  shoulder_lift_bracket_left.stl  torso.stl  upper_torso2.stl  waist top lower left.stl  waist top lower right.stl  waist top upper left.stl  waist top upper right.stl
msg/: BatteryState.msg  RobbieArmAction.msg  RobbieArmActionFeedback.msg  RobbieArmActionGoal.msg  RobbieArmActionResult.msg  RobbieArmFeedback.msg  RobbieArmGoal.msg  RobbieArmGripperAction.msg  RobbieArmGripperActionFeedback.msg  RobbieArmGripperActionGoal.msg  RobbieArmGripperActionResult.msg  RobbieArmGripperFeedback.msg  RobbieArmGripperGoal.msg  RobbieArmGripperResult.msg  RobbieArmResult.msg  RobbieBaseAction.msg  RobbieBaseActionFeedback.msg  RobbieBaseActionGoal.msg  RobbieBaseActionResult.msg  RobbieBaseFeedback.msg  RobbieBaseGoal.msg  RobbieBaseResult.msg  RobbieHeadAction.msg  RobbieHeadActionFeedback.msg  RobbieHeadActionGoal.msg  RobbieHeadActionResult.msg  RobbieHeadFeedback.msg  RobbieHeadGoal.msg  RobbieHeadResult.msg
nodes/: DeadReckoning.py  DeadReckoning.py~  Phoenix_smach 1.py  Phoenix_smach.py  Shoulder.py  Shoulder.py~  arduino.py  arduino.py~  controllerGUI.py  greeting.py  (+14 more)
(+155 files in other folders)
