<package>
  <name>robbie</name>
  <version>0.0.0</version>
  <description>Robbie the robot package</description>
  <maintainer email="peter@todo.todo">peter</maintainer>
  <license>BSD</license>
  <url>https://github.com/peterheim1/robbie/wiki</url>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>message_generation</build_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>urdf</run_depend>
  <run_depend>move_base</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>joy</run_depend>
  <run_depend>move_base_msgs</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
  <run_depend>dynamixel_controllers</run_depend>
  <run_depend>smach</run_depend>
  <run_depend>smach_ros</run_depend>
  <run_depend>smach_msgs</run_depend>
  <run_depend>executive_smach</run_depend>
  <run_depend>diagnostic_msgs</run_depend>
  <run_depend>festival</run_depend>
  <run_depend>message_runtime</run_depend>
  
 
 

  
</package>


